[gd_scene load_steps=5 format=3 uid="uid://byr0m0ymwu7dn"]

[ext_resource type="Script" path="res://Levels/Scripts/MainMenu.gd" id="1_k4ddh"]
[ext_resource type="PackedScene" uid="uid://btyi4ud1hml6s" path="res://Levels/Menues/SettingsMenu.tscn" id="2_bmhs3"]
[ext_resource type="AudioStream" uid="uid://78w2vhmxj87t" path="res://Resources/Sounds/BackgroundMusic/MainMenuBackgroundMusic.mp3" id="2_ir8ub"]

[sub_resource type="LabelSettings" id="LabelSettings_6ieon"]
font_size = 25

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4ddh")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.25
anchor_bottom = 0.99
grow_vertical = 2

[node name="GameTitle" type="Label" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.074
offset_right = -1.0
offset_bottom = 0.0480003
grow_horizontal = 2
text = "Project FRF Ultima"
label_settings = SubResource("LabelSettings_6ieon")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.51
anchor_right = 1.0
anchor_bottom = 0.61
offset_left = 10.0
offset_right = -10.0
theme_override_font_sizes/font_size = 25
text = "играть"
language = "ru_RU"

[node name="CharactersButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.63
anchor_right = 1.0
anchor_bottom = 0.73
offset_left = 10.0
offset_right = -10.0
theme_override_font_sizes/font_size = 25
disabled = true
text = "персонажи"
language = "ru_RU"

[node name="SettingsButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.85
offset_left = 10.0
offset_right = -10.0
theme_override_font_sizes/font_size = 25
text = "настройки"
language = "ru_RU"

[node name="ExitButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.87
anchor_right = 1.0
anchor_bottom = 0.97
offset_left = 10.0
offset_right = -10.0
theme_override_font_sizes/font_size = 25
text = "выход"
language = "ru_RU"

[node name="SettingsMenu" parent="." instance=ExtResource("2_bmhs3")]
visible = false
layout_mode = 1

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ir8ub")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainPanel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainPanel/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainPanel/ExitButton" to="." method="_on_exit_button_pressed"]
